Refactor and cleanup

--- a/Finder/Finder.csproj
+++ b/Finder/Finder.csproj
@@ -43,8 +43,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Display.cs" />
+    <Compile Include="FileSearcher.cs" />
     <Compile Include="Finder.cs" />
-    <Compile Include="FindingEventArgs.cs" />
     <Compile Include="Help.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
