--- a/Finder/Finder.csproj
+++ b/Finder/Finder.csproj
@@ -52,6 +52,9 @@
     <Compile Include="FinderForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FinderForm.Designer.cs">
+      <DependentUpon>FinderForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
